--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="header">
         <div class="container">
-            <img class="logo" src="images/logo.png" alt="">
+            <img class="logo" src="images/Dragon.png" alt="">
             <div class="links">
                 <span class="icon">
                     <span></span>
