translate intro and 3 other column to Ar

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <div class="landing">
     <div class="intro-text">
-        <h1>Hello There</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        <h1>مرحبًا بك في عالم التقنية</h1>
+        <p>هنا في مأوى التكنولوجيا، يتجسد روح الإبداع والتحدي الذي يميز حسام، نقدم لك خدمات مميزة ، حيث يلتقي الابتكار بالتميز</p>
     </div>
 </div>
 
@@ -51,20 +51,20 @@
 
         <div class="feat">
             <i class="fas fa-magic fa-3x"></i>
-            <h3>Tell Us Your Idea</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+            <h3>أخبرنا عن مفهومك</h3>
+            <p>ندعوك لتشاركنا فكرتك ومفهومك. أخبرنا عن الرؤية التي تحملها، وكيف يمكننا معًا تحويلها إلى واقع ملموس</p>
         </div>
 
         <div class="feat">
             <i class="fas fa-gem fa-3x"></i>
-            <h3>We will Do All The Work</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+            <h3>سنقوم بكل العمل لك</h3>
+            <p>في عالم مليء بالتحديات، نحن هنا لتسهيل رحلتك، من أجل تحقيق رؤيتك. استند إلينا لتحويل أفكارك إلى واقع </p>
         </div>
 
         <div class="feat">
             <i class="fas fa-globe-africa fa-3x"></i>
-            <h3>Your Product is Worldwide</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+            <h3>منتجك عالمي الانتشار</h3>
+            <p>منتجاننا يتسم بالعالمية، حيث يتجاوز حدوده ليمتد تأثيره حول العالم، يقدم تجربة فريدة وشاملة</p>
         </div>
     </div>
 </div>
