Translate Services To ar, check h3,p font size

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +59,7 @@
         <div class="feat">
             <i class="fas fa-gem fa-3x"></i>
             <h3>سنقوم بكل العمل لك</h3>
-            <p>في عالم مليء بالتحديات، نحن هنا لتسهيل رحلتك، من أجل تحقيق رؤيتك. استند إلينا لتحويل أفكارك إلى واقع </p>
+            <p>في عالم مليء بالتحديات، نحن هنا لتسهيل رحلتك، من أجل تحقيق رؤيتك.  </p>
         </div>
 
         <div class="feat">
@@ -73,7 +74,7 @@
 <!-- start Services -->
 <div class="services" id="services">
     <div class="container">
-        <h2 class="special-heading">Services</h2>
+        <h3 class="special-heading">خدماتنا: رحلتك المخصصة في عالم التقنية</h3>
         <p>Don't be busy, be productive</p>
 
         <div class="services-content">
@@ -81,21 +82,20 @@
             <div class="col">
                 
                 <div class="srv">
-                    <i class="fas fa-palette fa-2x"></i>
+                    <i class="fa fa-network-wired fa-2x"></i>
                     <div class="text">
-                        <h3>Graphic Design</h3>
-                        <p>
-                            Graphic design is the process of visual communication and problem-solving using one or more of typography, photography and illustration.
+                        <h3>تصميم وتنفيذ الشبكات</h3>
+                        <p>تنفيذ حلول متقدمة لتحقيق تكامل فعّال في بيئتك الرقمية
                         </p>
                     </div>
                 </div>
 
                 <div class="srv">
-                    <i class="fab fa-sketch fa-2x"></i>
+                    <i class="fa-solid fa-video fa-2x" ></i>
                     <div class="text">
-                        <h3>UI & UX</h3>
+                        <h3>أنظمة الأمان والمراقبة</h3>
                         <p>
-                            Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction.
+                            توفير حلول مخصصة لتحقيق مستويات عالية من الحماية والمراقبة
                         </p>
                     </div>
                 </div>
@@ -106,21 +106,21 @@
             <div class="col">
                 
                 <div class="srv">
-                    <i class="fas fa-vector-square fa-2x"></i>
+                    <i class="fa fa-suitcase-medical fa-2x"></i>
                     <div class="text">
-                        <h3>Web Design</h3>
+                        <h3>الدعم الشامل لمنظومة الحاسوب</h3>
                         <p>
-                            Web design encompasses many different skills and disciplines in the production and maintenance of websites.
+                            صيانة دورية و استشارات فنية لترقية وتحسين أنظمة الحاسوب الحالية لضمان الأداء الأمثل.
                         </p>
                     </div>
                 </div>
 
                 <div class="srv">
-                    <i class="fas fa-pencil-ruler fa-2x"></i>
+                    <i class="fa-solid fa-code fa-2x"></i>
                     <div class="text">
-                        <h3>Web Development</h3>
+                        <h3>برمجة البرمجيات الخاصة</h3>
                         <p>
-                            Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.
+                            تطوير برمجيات مخصصة و حلول برمجية مبتكرة تعزز كفاءة العمل
                         </p>
                     </div>
                 </div>
