Add Design Section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,25 @@
 </div>
 <!-- End Services -->
 
+<!-- start Design -->
+<div class="design">
+    <div class="image">
+        
+        <img src="./images/mobile.png" alt="">
+    </div>
+    
+    <div class="text">
+        <h2>تصميم مواقعنا: تتفرد في كل تفصيل.</h2>
+<ul>
+    <li><strong>تصميم متجاوب :</strong> جعلنا المواقع تتكيف بسلاسة مع جميع الأجهزة .</li>
+    <li><strong>جاذبية التصميم :</strong> تصميم حديث وجذاب يعكس هويتك بشكل فريد.</li>
+    <li><strong>سهولة الاستخدام :</strong> ركزنا على جعل التفاعل مع الموقع سهلاً للغاية،</li>
+    <li><strong>الكود النظيف والقوي:</strong> بنينا أكوادًا فعّالة ونظيفة لتحقيق أداء ممتاز   .</li>
+</ul>
+
+    </div>
+</div>
+<!-- End Design -->
 
 <!-- start Portfolio -->
 <div class="portfolio" id="portfolio">
