--- a/DesignTwo/index.html
+++ b/DesignTwo/index.html
@@ -59,5 +59,62 @@
             <li></li>
         </ul>
     </div>
+
+    <div class="services">
+        <div class="container">
+            <div class="main-heading">
+                <h2>services</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit sunt reiciendis est. Quis, ratione recusandae.
+                </p>
+            </div>
+
+            <div class="service-container">
+                <div class="srv-box">
+                    <i class="fas fa-desktop fa-3x"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-cog fa-3x"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, quae ipsam placeat quis dolore quasi!</p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-pencil-ruler fa-3x"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, quae ipsam placeat quis dolore quasi!</p>
+                    </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-camera fa-3x"></i>
+                    <div class="text">
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, quae ipsam placeat quis dolore quasi!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="design">
+        <div class="image">
+            <img src="./images/mobile.png" alt="">
+        </div>
+        <div class="text">
+            <h2>our design comes with ...</h2>
+            <ul>
+                <li>Responsive design</li>
+                <li>Modern And Clean Design</li>
+                <li>Clean Code</li>
+                <li>Browser Freindly</li>
+            </ul>
+        </div>
+        
+    </div>
 </body>
 </html>
