update responcive Desing

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <div class="text">
         <h2>تصميم مواقعنا: تتفرد في كل تفصيل.</h2>
 <ul>
-    <li><strong>تصميم متجاوب :</strong> جعلنا المواقع تتكيف بسلاسة مع جميع الأجهزة .</li>
-    <li><strong>جاذبية التصميم :</strong> تصميم حديث وجذاب يعكس هويتك بشكل فريد.</li>
-    <li><strong>سهولة الاستخدام :</strong> ركزنا على جعل التفاعل مع الموقع سهلاً للغاية،</li>
-    <li><strong>الكود النظيف والقوي:</strong> بنينا أكوادًا فعّالة ونظيفة لتحقيق أداء ممتاز   .</li>
+    <li><strong>تصميم متجاوب </strong> <span> :جعلنا المواقع تتكيف بسلاسة مع جميع الشاشات . </span></li>
+    <li><strong>جاذبية التصميم </strong> <span> :  تصميم حديث وجذاب يعكس هويتك بشكل فريد . </span></li>
+    <li><strong>سهولة الاستخدام </strong> <span> : ركزنا على جعل التفاعل مع الموقع سهلاً للغاية، </span></li>
+    <li><strong>الكود النظيف والقوي </strong> <span> :  بنينا أكوادًا فعّالة ونظيفة لتحقيق أداء ممتاز . </span></li>
 </ul>
 
     </div>
