--- a/DesignTwo/index.html
+++ b/DesignTwo/index.html
@@ -233,6 +233,33 @@
 
     <!-- end AboutUs -->
 
+    <!-- start stats -->
+    <div class="stats">
+        <div class="container">
+            <div class="box">
+                <i class="fa fa-mug-hot"></i>
+                <div class="number">1.236</div>
+                <p>Coffee Drinks</p>
+            </div>
+            <div class="box">
+                <i class="far fa-folder"></i>
+                <div class="number">256</div>
+                <p>Completed Projects</p>
+            </div>
+            <div class="box">
+                <i class="far fa-envelope"></i>
+                <div class="number">1,743</div>
+                <p>Mail Sent</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-trophy"></i>
+                <div class="number">17</div>
+                <p>Awards Received</p>
+            </div>
+        </div>
+    </div>
+    <!-- end stats -->
+
 </body>
 
 </html>
