update icone style

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col">
 
                     <div class="srv">
-                        <i class="fa fa-network-wired fa-2x"></i>
+                        <i class="fa fa-network-wired"></i>
                         <div class="text">
                             <h3>تصميم وتنفيذ شبكات الحاسوب</h3>
                             <p>تنفيذ حلول متقدمة لتحقيق تكامل فعّال في بيئتك الرقمية
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="srv">
-                        <i class="fa-solid fa-video fa-2x"></i>
+                        <i class="fa-solid fa-video"></i>
                         <div class="text">
                             <h3>أنظمة الأمان والمراقبة</h3>
                             <p>
@@ -108,7 +108,7 @@
                 <div class="col">
 
                     <div class="srv">
-                        <i class="fa fa-suitcase-medical fa-2x"></i>
+                        <i class="fa fa-suitcase-medical"></i>
                         <div class="text">
                             <h3>الدعم الشامل لمنظومة الحاسوب</h3>
                             <p>
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="srv">
-                        <i class="fa-solid fa-code fa-2x"></i>
+                        <i class="fa-solid fa-code"></i>
                         <div class="text">
                             <h3>برمجة البرمجيات الخاصة</h3>
                             <p>
