--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200;0,500;0,800;1,400;1,700&display=swap"
         rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu:wght@600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;600&family=Noto+Nastaliq+Urdu:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -77,7 +86,7 @@
     <div class="services" id="services">
         <div class="container">
             <h3 class="special-heading">خدماتنا: رحلتك المخصصة في عالم التقنية</h3>
-            <p>Don't be busy, be productive</p>
+            <p>Don't be busy, be <span>productive</span></p>
 
             <div class="services-content">
 
@@ -166,7 +175,7 @@
     <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">معرض أعمالنا</h2>
-            <p>If you do it right, it will last forever.</p>
+            <p>If you do it <span>right</span>, it will last forever.</p>
 
             <div class="portfolio-content">
 
@@ -219,7 +228,7 @@
     <div class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="special-heading">مواقع تم محاكاة تصميمها</h2>
-            <p>If you can DREAM it you can do it</p>
+            <p>If you can <span>dream</span> it you can do it</p>
 
             <div class="portfolio-content">
 
@@ -305,7 +314,7 @@ End About -->
             <h2 class="special-heading">
                 نرحب بتواصلكم معنا
             </h2>
-            <p>We are born to create</p>
+            <p>We are born to <span>create</span></p>
             <div class="info">
                 <p class="lable">
                     لا تتردد في التواصل معنا
