--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="landing">
         <div class="intro-text">
             <h1>مرحبًا بك في عالم التقنية</h1>
-            <p>هنا في مأوى التكنولوجيا، يتجسد روح الإبداع والتحدي الذي يميز حسام، نقدم لك خدمات مميزة ، حيث يلتقي
+            <p>هنا في مأوى التكنولوجيا، يتجسد روح الإبداع والتحدي الذي يميزنا، نقدم لك خدمات مميزة ، حيث يلتقي
                 الابتكار بالتميز</p>
         </div>
     </div>
@@ -240,8 +240,7 @@
 
 
                             <p>
-                                تمت محاكاة صفحة الدفع لموقع حراج كتجربة تعلم، حيث قام التصميم بمحاكاة واجهة موجودة
-                                بالفعل.
+                                تمت محاكاة صفحة الدفع لموقع حراج كتجربة تعلم،
                             </p>
                         </a>
                     </div>
@@ -256,8 +255,7 @@
                                 محاكاة صفحة تسجيل الدخول STC
                             </h3>
                             <p>
-                                تمت محاكاة صفحة الدخول لموقع شركة الاتصالات السعوديه كتجربة تعلم، حيث قام التصميم
-                                بمحاكاة واجهة موجودة بالفعل.
+                                تمت محاكاة صفحة الدخول لموقع شركة الاتصالات السعوديه كتجربة تعلم.
                             </p>
                         </a>
                     </div>
@@ -271,7 +269,7 @@
                             <h3>تنفيذ صفحة هبوط لمطعم</h3>
                             <p>
                              
-تصميم صفحة هبوط لمطعم يعتبر عنصرًا حيويًا لتحقيق تجربة مميزة للزوار وتحفيزهم على اتخاذ إجراءات محددة، مثل الحجز أو طلب الطعام عبر الإنترنت. يتميز هذا التصميم بتوفير مظهر جذاب وجذاب يعكس هوية المطعم ويشجع على استكشاف الخيارات المتاحة.
+                                يتميز هذا التصميم بتوفير مظهر جذاب يعكس هوية المطعم ويشجع على استكشاف الخيارات المتاحة.
                             </p>
                         </a>
                     </div>
