--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MrDragon From Sudan</title>
-    <link rel="stylesheet" href="css/leon.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/leon.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200;0,500;0,800;1,400;1,700&display=swap"
         rel="stylesheet">
@@ -279,30 +279,30 @@
     </div>
     <!-- End Portfolio -->
 
-    <!-- start About 
+    <!-- start About -->
+
 <div class="about" id="about">
     <div class="container">
-        <h2 class="special-heading">About</h2>
-        <p>Less is more work</p>
+        <h2 class="special-heading">نبذه تعريفية</h2>
+        <p>Less is <span>more</span></p>
 <div class="about-content">
     
         <div class="image">
-            <img src="images/about.jpeg" alt="">
-
+            <img src="images/Dragon.png" alt="">
         </div>
         <div class="text">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ducimus rerum nam, et id magnam.
+                خبير تقنية المعلومات وفني حاسوب، حيث يظهر سجلي الحافل في تحليل وتشخيص المشاكل التقنية وتحسين أداء الأنظمة, لدي خبرة وافرة في صيانة الأجهزة، بالإضافة إلى إدارة الشبكات وتقديم الدعم الفني .
+                يشمل نطاق خبرتي أيضًا تصميم برامج المبيعات و البرمجه الخاصه للأنظمه .
+                الإشراف على خدمات الصيانة و الدعم.
             </p>
-            <hr/>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, deserunt voluptas. Tempora aliquid quidem adipisci quis blanditiis nobis consectetur ea.</p>
+            <a href="./resume.html" class="btn" target="_blank">الإطلاع علي السيرة الذاتية</a>
         </div>
 
 </div>
     </div>
 </div>
-End About -->
-
+<!-- End About  -->
     <!-- start Contact -->
     <div class="contact" id="contact">
         <div class="container">
