--- a/resume.html
+++ b/resume.html
@@ -102,7 +102,7 @@
                     <h5>Technical Maintenance and Support Technician</h5>
                     <h6>
                         <i class="fa-regular fa-calendar-days"></i>
-                        08/2004 - 11/2006
+                       <span> 08/2004 - 11/2006</span>
                     </h6>
                     <ul>
                         <li>Evaluate hardware performance and identify faults and issues.</li>
@@ -120,7 +120,7 @@
                     </h5>
                     <h6>
                         <i class="fa-regular fa-calendar-days"></i>
-                        12/2006 - 03/2007
+                        <span>12/2006 - 03/2007</span>
                     </h6>
                     <ul>
                         <li>Designed sales and accounting software.</li>
@@ -138,11 +138,12 @@
                     <h5>
                         Sales and Systems Development Specialist
                         <br>
-                        Tasabeih Company for Home Appliances Sales 
+                        <span>
+                            Tasabeih Company for Home Appliances Sales 
+                        </span>
                     </h5>
                     <h6>
                         <i class="fa-regular fa-calendar-days"></i>
-                         
                     </h6>
                     <ul>
                         <li></li>
