--- a/index.html
+++ b/index.html
@@ -272,6 +272,18 @@
                     </div>
                 </div>
 
+                <div class="card">
+                    <img src="./images/ITServices.jpeg" alt="">
+                    <div class="info">
+                        <h3>تنفيذ صفحة لمؤسسه تقنية</h3>
+                        <p>
+                         
+                            يتميز هذا التصميم بتوفير مظهر جذاب يعكس هوية المؤسسة ويشجع على استكشاف الخيارات المتاحة.
+                        </p>
+                        <a class="btn" href="https://h-ibraheem.github.io/ITServices.github.io/" target="_blank">عرض التصميم</a>
+                    </div>
+                </div>
+
             </div>
 
 
