--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-
+<i class="fa fa-arrow-up btn-up"></i>
     <header>
         <div class="container">
             <a href="#" class="logo">
@@ -351,7 +351,13 @@ End About -->
     <!-- start Footer -->
     <div class="footer">All Right Reserved, <span>MrDragon</span> &copy; 2023 </div>
     <!-- End Footer -->
-
+<!-- Up btn -->
+ 
+    
+ 
+    
+</div>
+<script src="./js/main.js"></script>
 </body>
 
 </html>
