dynamic Landing Image

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
 <i class="fa fa-arrow-up btn-up"></i>
     <header>
+        
         <div class="container">
             <a href="#" class="logo">
                 <img src="./images/Dragon.png" alt="Logo">
@@ -46,6 +47,7 @@
     <!-- start Landing  section -->
 
     <div class="landing">
+        <div class="overlay"></div>
         <div class="intro-text">
             <h1>مرحبًا بك في عالم التقنية</h1>
             <p>هنا في مأوى التكنولوجيا، يتجسد روح الإبداع والتحدي الذي يميزنا، نقدم لك خدمات مميزة ، حيث يلتقي
